# conan-cfitsio

./: CMakeLists.txt  README.md  conandata.yml  conanfile.py
patches/: fix-cmake.patch
test_package/: conanfile.py
